Port all content page to Tailwind

--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -1,11 +1,9 @@
 <header class="py-16">
   <h1 class="text-5xl text-center leading-tight">
-    {{ .Title | default .Site.Title }}
+    Azure Collected
   </h1>
-  {{ with .Params.description }}
   <h2 class="text-lg text-center text-gray-700">
-    {{ . }}
+    The best Azure content on the web
   </h2>
-  {{ end }}
   </div>
 </header>
