Port post page to use Tailwind

--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -1,3 +1,4 @@
+{{ if not (eq .CurrentSection.Title "Content") }}
 <header class="py-16">
   <h1 class="text-5xl text-center leading-tight">
     Azure Collected
@@ -7,3 +8,4 @@
   </h2>
   </div>
 </header>
+{{ end }}
