--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -80,7 +80,7 @@
   {{ end }}
 </head>
 
-<body class="bg-gray-100 flex flex-col">
+<body class="bg-gray-100 flex flex-col h-full">
   <nav class="bg-blue-700">
     <div class="max-w-7xl mx-auto sm:px6 lg:px-8">
       <div class="max-w-6xl mx-auto">
