--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,16 +1,78 @@
 {{ define "main" }}
-  <div class="container mx-auto max-w-6xl">
+<div class="container mx-auto max-w-6xl">
   <article class="text-gray-700">
-      <h1 class="text-center md:text-left text-2xl font-semibold pt-8 pb-4 px-4">
-        {{ .CurrentSection.Title }}
-      </h1>
-      <h2 class="text-center md:text-left text-3xl font-semibold pt-8 pb-4 px-4">
-        {{ .Title }}
-      </h2>
-      <hr>
-      {{/* partial "social-share.html" . */}}
-      <div class="px-4">
-        {{- .Content -}}
+    <h1 class="text-center md:text-left text-2xl font-semibold pt-8 pb-4 px-4">
+      {{ .CurrentSection.Title }}
+    </h1>
+    <h2 class="text-center md:text-left text-3xl font-semibold pt-8 pb-4 px-4">
+      {{ .Title }}
+    </h2>
+    <hr>
+    {{/* partial "social-share.html" . */}}
+    <div class="px-4">
+      {{ if isset .Params "msbuild" }}
+      <span
+        class="text-center md:text-left inline-flex items-center px-3 py-1 mx-1 mt-8 rounded-full text-sm font-medium leading-5 bg-red-200 text-red-800">
+        MSBuild
+      </span>
+      <ul class="mx-4">
+      {{ range .Params.msbuild }}
+        <li class="py-4">
+            <a href="{{ .url }}" class="font-medium text-lg text-gray-700 hover:underline">
+                {{ .title }}
+            </a> - {{ .feedTitle }}
+        </li>  
+      {{end }}
+    </ul>
+    {{ end }}
+
+      {{ if isset .Params "blogs" }}
+        <span
+          class="text-center md:text-left inline-flex items-center px-3 py-1 mx-1 mt-8 rounded-full text-sm font-medium leading-5 bg-purple-200 text-purple-800">
+          Blog
+        </span>
+        <ul class="mx-4">
+        {{ range .Params.blogs }}
+          <li class="py-4">
+              <a href="{{ .url }}" class="font-medium text-lg text-gray-700 hover:underline">
+                  {{ .title }}
+              </a> - {{ .feedTitle }}
+          </li>  
+        {{end }}
+      </ul>
+      {{ end }}
+
+      {{ if isset .Params "podcasts" }}
+      <span
+        class="text-center md:text-left inline-flex items-center px-3 py-1 mx-1 mt-8 rounded-full text-sm font-medium leading-5 bg-orange-200 text-orange-800">
+        Podcast
+      </span>
+      <ul class="mx-4">
+      {{ range .Params.podcasts }}
+        <li class="py-4">
+            <a href="{{ .url }}" class="font-medium text-lg text-gray-700 hover:underline">
+                {{ .title }}
+            </a> - {{ .feedTitle }}
+        </li>  
+      {{end }}
+    </ul>
+    {{ end }}
+
+      {{ if isset .Params "videos" }}
+      <span
+        class="text-center md:text-left inline-flex items-center px-3 py-1 mx-1 mt-8 rounded-full text-sm font-medium leading-5 bg-teal-200 text-teal-800">
+        Video
+      </span>
+      <ul class="mx-4">
+      {{ range .Params.videos }}
+        <li class="py-4">
+            <a href="{{ .url }}" class="font-medium text-lg text-gray-700 hover:underline">
+                {{ .title }}
+            </a> - {{ .feedTitle }}
+        </li>  
+      {{end }}
+    </ul>
+    {{ end }}
     </div>
   </article>
 </div>
