--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,7 +10,7 @@
     <hr>
     {{/* partial "social-share.html" . */}}
     <div class="px-4">
-      {{ if isset .Params "msbuild" }}
+      {{ if gt (.Params.msbuild) 0 }}
       <span
         class="text-center md:text-left inline-flex items-center px-3 py-1 mx-1 mt-8 rounded-full text-sm font-medium leading-5 bg-red-200 text-red-800">
         MSBuild
@@ -26,7 +26,7 @@
     </ul>
     {{ end }}
 
-      {{ if isset .Params "blogs" }}
+    {{ if gt (.Params.blogs) 0 }}
         <span
           class="text-center md:text-left inline-flex items-center px-3 py-1 mx-1 mt-8 rounded-full text-sm font-medium leading-5 bg-purple-200 text-purple-800">
           Blog
@@ -42,7 +42,7 @@
       </ul>
       {{ end }}
 
-      {{ if isset .Params "podcasts" }}
+      {{ if gt (.Params.podcasts) 0 }}
       <span
         class="text-center md:text-left inline-flex items-center px-3 py-1 mx-1 mt-8 rounded-full text-sm font-medium leading-5 bg-orange-200 text-orange-800">
         Podcast
@@ -58,7 +58,7 @@
     </ul>
     {{ end }}
 
-      {{ if isset .Params "videos" }}
+    {{ if gt (.Params.videos) 0 }}
       <span
         class="text-center md:text-left inline-flex items-center px-3 py-1 mx-1 mt-8 rounded-full text-sm font-medium leading-5 bg-teal-200 text-teal-800">
         Video
