--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ $.Site.LanguageCode | default "en" }}">
+<html lang="{{ $.Site.LanguageCode | default "en" }}" class="h-full">
 
 <head>
   <meta charset="utf-8">
@@ -81,6 +81,7 @@
 </head>
 
 <body class="bg-gray-100 flex flex-col h-full">
+  <div></div>
   <nav class="bg-blue-700">
     <div class="max-w-7xl mx-auto sm:px6 lg:px-8">
       <div class="max-w-6xl mx-auto">
