--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,9 +1,9 @@
 {{ define "main" }}
 <div class="container mx-auto max-w-6xl">
   <article class="text-gray-700">
-    <h1 class="text-center md:text-left text-2xl font-semibold pt-8 pb-4 px-4">
+    <!-- <h1 class="text-center md:text-left text-2xl font-semibold pt-8 pb-4 px-4">
       {{ .CurrentSection.Title }}
-    </h1>
+    </h1> -->
     <h2 class="text-center md:text-left text-3xl font-semibold pt-8 pb-4 px-4">
       {{ .Title }}
     </h2>
