--- a/layouts/page/single.html
+++ b/layouts/page/single.html
@@ -6,7 +6,7 @@
             {{ .Title }}
         </h1>
         <hr>
-        <div class="px-4 py-8 leading-loose text-lg">
+        <div class="px-4 py-8 leading-relaxed text-lg">
             {{ .Content }}
         </div>
     </div>
