--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -17,8 +17,8 @@
       </span>
       <ul class="mx-4">
       {{ range .Params.msbuild }}
-        <li class="py-4">
-            <a href="{{ .url }}" class="font-medium text-lg text-gray-700 hover:underline">
+        <li class="py-4 md:text-xl text-lg ">
+            <a href="{{ .url }}" class="font-medium text-gray-700 hover:underline">
                 {{ .title }}
             </a> - {{ .feedTitle }}
         </li>  
@@ -33,8 +33,8 @@
         </span>
         <ul class="mx-4">
         {{ range .Params.blogs }}
-          <li class="py-4">
-              <a href="{{ .url }}" class="font-medium text-lg text-gray-700 hover:underline">
+          <li class="py-4 md:text-xl text-lg">
+              <a href="{{ .url }}" class="font-medium text-gray-700 hover:underline">
                   {{ .title }}
               </a> - {{ .feedTitle }}
           </li>  
@@ -49,8 +49,8 @@
       </span>
       <ul class="mx-4">
       {{ range .Params.podcasts }}
-        <li class="py-4">
-            <a href="{{ .url }}" class="font-medium text-lg text-gray-700 hover:underline">
+        <li class="py-4 md:text-xl text-lg ">
+            <a href="{{ .url }}" class="font-medium text-gray-700 hover:underline">
                 {{ .title }}
             </a> - {{ .feedTitle }}
         </li>  
@@ -65,8 +65,8 @@
       </span>
       <ul class="mx-4">
       {{ range .Params.videos }}
-        <li class="py-4">
-            <a href="{{ .url }}" class="font-medium text-lg text-gray-700 hover:underline">
+        <li class="py-4 md:text-xl text-lg ">
+            <a href="{{ .url }}" class="font-medium text-gray-700 hover:underline">
                 {{ .title }}
             </a> - {{ .feedTitle }}
         </li>  
