--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -119,7 +119,7 @@
           </div>
           <div class="md:hidden" onclick="togglemenu()">
             <div class="flex">
-              <button
+              <button aria-label="Toggle menu"
                 class="inline-flex items-center justify-center p-4 rounded-md text-white hover:text-white focus:outline-none focus:text-white">
                 <svg class="h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
                   <path :class="{'hidden': open, 'inline-flex': !open }" class="inline-flex" stroke-linecap="round"
@@ -177,25 +177,25 @@
       <div class="max-w-screen-xl mx-auto py-12 px-4 overflow-hidden sm:px-6 lg:px-8">
         <nav class="-mx-5 -my-2 flex flex-wrap justify-center">
           <div class="px-5 py-2">
-            <a href="{{ .Site.BaseURL}}/content/" class="text-base leading-6 text-gray-500 hover:text-gray-900">
+            <a href="{{ .Site.BaseURL}}/content/" class="text-base leading-6 text-gray-600 hover:text-gray-900">
               All content
             </a>
           </div>
           <div class="px-5 py-2">
-            <a href="{{ .Site.BaseURL}}/about/" class="text-base leading-6 text-gray-500 hover:text-gray-900">
+            <a href="{{ .Site.BaseURL}}/about/" class="text-base leading-6 text-gray-600 hover:text-gray-900">
               About
             </a>
           </div>
         </nav>
         <div class="mt-8 flex justify-center">
-          <a href="https://twitter.com/NRKirby" class="text-gray-400 hover:text-gray-500">
+          <a href="https://twitter.com/NRKirby" class="text-gray-400 hover:text-gray-600">
             <span class="sr-only">Twitter</span>
             <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
               <path
                 d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" />
             </svg>
           </a>
-          <a href="{{ .Site.BaseURL}}/index.xml" class="ml-6 text-gray-400 hover:text-gray-500">
+          <a href="{{ .Site.BaseURL}}/index.xml" class="ml-6 text-gray-400 hover:text-gray-600">
             <span class="sr-only">RSS</span>
             <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
               <path d="M2.4,2.4v2.367c7.086,0,12.83,5.746,12.83,12.832h2.369C17.599,9.205,10.794,2.4,2.4,2.4z M2.4,7.137v2.369
@@ -205,7 +205,7 @@
           </a>
         </div>
         <div class="mt-8">
-          <p class="text-center text-base leading-6 text-gray-400">
+          <p class="text-center text-base leading-6 text-gray-500">
             &copy; 2020 Azure Collected
           </p>
         </div>
