--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -16,28 +16,34 @@
         MSBuild
       </span>
       <ul class="mx-4">
-      {{ range .Params.msbuild }}
+        {{ range .Params.msbuild }}
         <li class="py-4 md:text-xl text-lg ">
+          <div>
             <a href="{{ .url }}" class="font-medium text-gray-700 hover:underline">
-                {{ .title }}
-            </a> - {{ .feedTitle }}
-        </li>  
-      {{end }}
-    </ul>
-    {{ end }}
+              {{ .title }}
+            </a> <br/> <span class="text-md">{{ .feedTitle }}</span>
+          </div>
+          <p class="pl-2 md:pl-3 pr-6 pt-1 md-pt-2 md:text-md text-sm text-gray-600">{{ .description }}</p>
+        </li>
+        {{end }}
+      </ul>
+      {{ end }}
 
-    {{ if gt (.Params.blogs) 0 }}
-        <span
-          class="text-center md:text-left inline-flex items-center px-3 py-1 mx-1 mt-8 rounded-full text-sm font-medium leading-5 bg-purple-200 text-purple-800">
-          Blog
-        </span>
-        <ul class="mx-4">
+      {{ if gt (.Params.blogs) 0 }}
+      <span
+        class="text-center md:text-left inline-flex items-center px-3 py-1 mx-1 mt-8 rounded-full text-sm font-medium leading-5 bg-purple-200 text-purple-800">
+        Blog
+      </span>
+      <ul class="mx-4">
         {{ range .Params.blogs }}
-          <li class="py-4 md:text-xl text-lg">
-              <a href="{{ .url }}" class="font-medium text-gray-700 hover:underline">
-                  {{ .title }}
-              </a> - {{ .feedTitle }}
-          </li>  
+        <li class="py-4 md:text-xl text-lg">
+          <div>
+            <a href="{{ .url }}" class="font-medium text-gray-700 hover:underline">
+              {{ .title }}
+            </a> <br/> <span class="text-md">{{ .feedTitle }}</span>
+          </div>
+          <p class="pl-2 md:pl-3 pr-6 pt-1 md-pt-2 md:text-md text-sm text-gray-600">{{ .description }}</p>
+        </li>
         {{end }}
       </ul>
       {{ end }}
@@ -48,31 +54,37 @@
         Podcast
       </span>
       <ul class="mx-4">
-      {{ range .Params.podcasts }}
+        {{ range .Params.podcasts }}
         <li class="py-4 md:text-xl text-lg ">
+          <div>
             <a href="{{ .url }}" class="font-medium text-gray-700 hover:underline">
-                {{ .title }}
-            </a> - {{ .feedTitle }}
-        </li>  
-      {{end }}
-    </ul>
-    {{ end }}
+              {{ .title }}
+            </a> <br/> <span class="text-md">{{ .feedTitle }}</span>
+          </div>
+          <p class="pl-2 md:pl-3 pr-6 pt-1 md-pt-2 md:text-md text-sm text-gray-600">{{ .description }}</p>
+        </li>
+        {{end }}
+      </ul>
+      {{ end }}
 
-    {{ if gt (.Params.videos) 0 }}
+      {{ if gt (.Params.videos) 0 }}
       <span
         class="text-center md:text-left inline-flex items-center px-3 py-1 mx-1 mt-8 rounded-full text-sm font-medium leading-5 bg-teal-200 text-teal-800">
         Video
       </span>
       <ul class="mx-4">
-      {{ range .Params.videos }}
+        {{ range .Params.videos }}
         <li class="py-4 md:text-xl text-lg ">
+          <div>
             <a href="{{ .url }}" class="font-medium text-gray-700 hover:underline">
-                {{ .title }}
-            </a> - {{ .feedTitle }}
-        </li>  
-      {{end }}
-    </ul>
-    {{ end }}
+              {{ .title }}
+            </a> <br/> <span class="text-md">{{ .feedTitle }}</span>
+          </div>
+          <p class="pl-2 md:pl-3 pr-6 pt-1 md-pt-2 md:text-md text-sm text-gray-600">{{ .description }}</p>
+        </li>
+        {{end }}
+      </ul>
+      {{ end }}
     </div>
   </article>
 </div>
