Style description a lighter grey on smaller screen sizes

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -23,7 +23,7 @@
               {{ .title }}
             </a> <span class="font-normal text-lg text-gray-700"> - {{ .feedTitle }}</span>
           </div>
-          <p class="pr-6 pt-1 md-pt-2 text-sm md:text-md lg:text-lg text-gray-600">{{ .description }}</p>
+          <p class="pr-6 pt-1 md-pt-2 text-sm md:text-md lg:text-lg text-gray-500 md:text-gray-600">{{ .description }}</p>
         </li>
         {{end }}
       </ul>
@@ -42,7 +42,7 @@
               {{ .title }}
             </a> <span class="font-normal text-lg text-gray-700"> - {{ .feedTitle }}</span>
           </div>
-          <p class="pr-6 pt-1 md-pt-2 text-sm md:text-md lg:text-lg text-gray-600">{{ .description }}</p>
+          <p class="pr-6 pt-1 md-pt-2 text-sm md:text-md lg:text-lg text-gray-500 md:text-gray-600">{{ .description }}</p>
         </li>
         {{end }}
       </ul>
@@ -61,7 +61,7 @@
               {{ .title }}
             </a> <span class="font-normal text-lg text-gray-700"> - {{ .feedTitle }}</span>
           </div>
-          <p class="pr-6 pt-1 md-pt-2 text-sm md:text-md lg:text-lg text-gray-600">{{ .description }}</p>
+          <p class="pr-6 pt-1 md-pt-2 text-sm md:text-md lg:text-lg text-gray-500 md:text-gray-600">{{ .description }}</p>
         </li>
         {{end }}
       </ul>
@@ -80,7 +80,7 @@
               {{ .title }}
             </a> <span class="font-normal text-lg text-gray-700"> - {{ .feedTitle }}</span>
           </div>
-          <p class="pr-6 pt-1 md-pt-2 text-sm md:text-md lg:text-lg text-gray-600">{{ .description }}</p>
+          <p class="pr-6 pt-1 md-pt-2 text-sm md:text-md lg:text-lg text-gray-500 md:text-gray-600">{{ .description }}</p>
         </li>
         {{end }}
       </ul>
