Fix bug where video being shown for all items on All Content page

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -38,7 +38,7 @@
                                 </span>
                                 {{ end }}
 
-                                {{ if gt (.Params.blogs) 0 }}
+                                {{ if gt (.Params.videos) 0 }}
                                 <span
                                     class="inline-flex items-center  px-3 py-1 mx-1 rounded-full text-sm font-medium leading-5 bg-teal-200 text-teal-800">
                                     Video
