Tweak header styles so that mobile shows at least one days's content on mobile

--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -1,9 +1,9 @@
 {{ if not (eq .CurrentSection.Title "Content") }}
-<header class="py-16">
-  <h1 class="text-5xl text-center leading-tight">
+<header class="py-12">
+  <h1 class="text-4xl md:text-5xl text-center leading-tight">
     Azure Collected
   </h1>
-  <h2 class="text-lg text-center text-gray-700">
+  <h2 class="text-md md:text-lg text-center text-gray-700">
     The best Azure content on the web
   </h2>
   </div>
